<resources>
    <string name="app_name">MusicRental</string>
    <string name="instrument_photo">Instrument photo</string>
    <string name="search">Поиск…</string>
    <string name="filters">Фильтры</string>
    <string name="category">Категория</string>
    <string name="min_price">Мин. цена</string>
    <string name="max_price">Макс. цена</string>
    <string name="title">Название</string>
    <string name="price">Цена</string>
    <string name="apply">Применить</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="title_hint">Название</string>
    <string name="description_hint">Описание</string>
    <string name="category_hint">Категория</string>
    <string name="price_hint">Цена (₽/день)</string>
    <string name="pick_photo">Выбрать фото</string>
    <string name="photo">Фото</string>
    <string name="edit_instrument">Редактировать инструмент</string>
    <string name="photo1">Фото инструмента</string>
    <string name="book_now">Забронировать</string>
    <string name="profile">Профиль</string>
    <string name="rating_label">Оценка инструмента</string>
    <string name="pay">Оплатить</string>
    <string name="leave_review">Оставить отзыв</string>
    <string name="review">Отзыв</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="book">Забронировать</string>
    <string name="confirm_delete">Вы уверены, что хотите удалить инструмент?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="add_review">Добавить ревью</string>
    <string name="chat">Чат</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="thanks_for_review">Спасибо за Ваш отзыв!</string>
    <string name="error_with_code">Ошибка с кодом!</string>
    <string name="home">Главная</string>
    <string name="chats">Чаты</string>
    <string name="comment_optional">Комментарий (необязательно)</string>
    <string name="please_select_rating">Пожалуйста, поставьте оценку</string>
    <string name="welcome_title">Добро пожаловать в MusicRental</string>
    <string name="welcome_subtitle">Арендуйте музыкальные инструменты за пару кликов</string>
    <string name="welcome_button_enter">Войти</string>
    <string name="welcome_image_desc">Добро пожаловать</string>
    <string name="enable_dark_theme">Тёмная тема</string>
    <string name="message">Сообщение</string>
    <string name="me">Я</string>
    <string name="instrument_image">Изображение инструмента</string>
    <string name="instrument_image_placeholder">Инструмент</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="fullscreen_image">Изображение</string>


</resources>