<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorSurface">

<TextView
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/filters"
android:textAppearance="?attr/textAppearanceHeadlineSmall"
android:textColor="?attr/colorOnSurface"
android:layout_marginBottom="12dp"/>


<com.google.android.material.textfield.TextInputLayout
style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/category"

app:boxStrokeColor="?attr/colorPrimary"
app:hintTextColor="?attr/colorOnSurfaceVariant">

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etCategory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:textColor="?attr/colorOnSurface"
    android:textColorHint="?attr/colorOnSurfaceVariant"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="12dp"
android:hint="@string/min_price"
app:boxStrokeColor="?attr/colorPrimary"
app:hintTextColor="?attr/colorOnSurfaceVariant">

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etMin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:textColor="?attr/colorOnSurface"
    android:textColorHint="?attr/colorOnSurfaceVariant"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="12dp"
android:hint="@string/max_price"
app:boxStrokeColor="?attr/colorPrimary"
app:hintTextColor="?attr/colorOnSurfaceVariant">

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etMax"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:textColor="?attr/colorOnSurface"
    android:textColorHint="?attr/colorOnSurfaceVariant"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
style="@style/Widget.Material3.Button"
android:id="@+id/btnApply"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="24dp"
android:text="@string/apply"/>
    </LinearLayout>
